--- a/Modeling Canvas/MainWindow.xaml
+++ b/Modeling Canvas/MainWindow.xaml
@@ -61,32 +61,32 @@
                                 <ColumnDefinition Width="135*"/>
                             </Grid.ColumnDefinitions>
                             <Label Content="Xx" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-                            <TextBox Text="{Binding ElementName=MyCanvas, Path=AffineParams.Xx, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                            <TextBox Text="{Binding ElementName=MainCanvas, Path=AffineParams.Xx, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
                      HorizontalAlignment="Left" Margin="38,15,0,0" VerticalAlignment="Top" Width="86"/>
 
                             <Label Content="Yx" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center"/>
-                            <TextBox Text="{Binding ElementName=MyCanvas, Path=AffineParams.Yx, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                            <TextBox Text="{Binding ElementName=MainCanvas, Path=AffineParams.Yx, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
                      HorizontalAlignment="Left" Margin="38,0,0,0" VerticalAlignment="Center" Width="86"/>
 
                             <Label Content="0x" HorizontalAlignment="Left" Margin="10,64,0,0" VerticalAlignment="Top"/>
-                            <TextBox Text="{Binding ElementName=MyCanvas, Path=AffineParams.Ox, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                            <TextBox Text="{Binding ElementName=MainCanvas, Path=AffineParams.Ox, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
                      HorizontalAlignment="Left" Margin="38,69,0,0" VerticalAlignment="Top" Width="86"/>
 
                             <Label Content="Xy" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Grid.Column="1"/>
-                            <TextBox Text="{Binding ElementName=MyCanvas, Path=AffineParams.Xy, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                            <TextBox Text="{Binding ElementName=MainCanvas, Path=AffineParams.Xy, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
                      HorizontalAlignment="Left" Margin="39,15,0,0" VerticalAlignment="Top" Width="86" Grid.Column="1"/>
 
                             <Label Content="Yy" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Grid.Column="1"/>
-                            <TextBox Text="{Binding ElementName=MyCanvas, Path=AffineParams.Yy, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                            <TextBox Text="{Binding ElementName=MainCanvas, Path=AffineParams.Yy, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
                      HorizontalAlignment="Left" Margin="39,0,0,0" VerticalAlignment="Center" Width="86" Grid.Column="1"/>
 
                             <Label Content="0y" HorizontalAlignment="Left" Margin="10,64,0,0" VerticalAlignment="Top" Grid.Column="1"/>
-                            <TextBox Text="{Binding ElementName=MyCanvas, Path=AffineParams.Oy, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                            <TextBox Text="{Binding ElementName=MainCanvas, Path=AffineParams.Oy, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
                      HorizontalAlignment="Left" Margin="39,69,0,0" VerticalAlignment="Top" Width="86" Grid.Column="1"/>
 
                             <Button Content="Apply" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Center" 
-        Command="{Binding ElementName=MyCanvas, Path=InvalidateCanvasCommand}" Width="106"/>
-                            <CheckBox IsChecked="{Binding AllowInfinityRender, ElementName=MyCanvas}" IsTabStop="False" Focusable="False" Content="Infinite render" HorizontalAlignment="Center" VerticalAlignment="Center" Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked" Grid.Column="1" Grid.Row="1" RenderTransformOrigin="0.497,0.734"/>
+        Command="{Binding ElementName=MainCanvas, Path=InvalidateCanvasCommand}" Width="106"/>
+                            <CheckBox IsChecked="{Binding AllowInfinityRender, ElementName=MainCanvas}" IsTabStop="False" Focusable="False" Content="Infinite render" HorizontalAlignment="Center" VerticalAlignment="Center" Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked" Grid.Column="1" Grid.Row="1" RenderTransformOrigin="0.497,0.734"/>
                         </Grid>
                     </Grid>
                 </TabItem>
@@ -105,45 +105,45 @@
 
                             <!-- Bind ProjectiveModel Properties -->
                             <Label Content="Xx" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-                            <TextBox Text="{Binding ElementName=MyCanvas, Path=ProjectiveParams.Xx, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                            <TextBox Text="{Binding ElementName=MainCanvas, Path=ProjectiveParams.Xx, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
                      HorizontalAlignment="Left" Margin="40,13,0,69" Width="50" Grid.ColumnSpan="2"/>
 
                             <Label Content="Yx" HorizontalAlignment="Left" Margin="10,35,0,0" VerticalAlignment="Top"/>
-                            <TextBox Text="{Binding ElementName=MyCanvas, Path=ProjectiveParams.Yx, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                            <TextBox Text="{Binding ElementName=MainCanvas, Path=ProjectiveParams.Yx, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
                      HorizontalAlignment="Left" Margin="40,38,0,44" Width="50" Grid.ColumnSpan="2"/>
 
                             <Label Content="Ox" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top"/>
-                            <TextBox Text="{Binding ElementName=MyCanvas, Path=ProjectiveParams.Ox, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                            <TextBox Text="{Binding ElementName=MainCanvas, Path=ProjectiveParams.Ox, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
                      HorizontalAlignment="Left" Margin="40,63,0,19" Width="50" Grid.ColumnSpan="2"/>
 
                             <Label Content="Xy" Grid.Column="1" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-                            <TextBox Text="{Binding ElementName=MyCanvas, Path=ProjectiveParams.Xy, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                            <TextBox Text="{Binding ElementName=MainCanvas, Path=ProjectiveParams.Xy, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
                      HorizontalAlignment="Left" Margin="39,13,0,69" Grid.Column="1" Width="50"/>
 
                             <Label Content="Yy" Grid.Column="1" HorizontalAlignment="Left" Margin="10,35,0,0" VerticalAlignment="Top"/>
-                            <TextBox Text="{Binding ElementName=MyCanvas, Path=ProjectiveParams.Yy, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                            <TextBox Text="{Binding ElementName=MainCanvas, Path=ProjectiveParams.Yy, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
                      HorizontalAlignment="Left" Margin="39,38,0,44" Grid.Column="1" Width="50"/>
 
                             <Label Content="Oy" Grid.Column="1" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top"/>
-                            <TextBox Text="{Binding ElementName=MyCanvas, Path=ProjectiveParams.Oy, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                            <TextBox Text="{Binding ElementName=MainCanvas, Path=ProjectiveParams.Oy, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
                      HorizontalAlignment="Left" Margin="39,63,0,19" Grid.Column="1" Width="50"/>
 
                             <Label Content="wX" Grid.Column="2" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-                            <TextBox Text="{Binding ElementName=MyCanvas, Path=ProjectiveParams.wX, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                            <TextBox Text="{Binding ElementName=MainCanvas, Path=ProjectiveParams.wX, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
                      HorizontalAlignment="Left" Margin="37,13,0,69" Grid.Column="2" Width="50"/>
 
                             <Label Content="wY" Grid.Column="2" HorizontalAlignment="Left" Margin="10,35,0,0" VerticalAlignment="Top"/>
-                            <TextBox Text="{Binding ElementName=MyCanvas, Path=ProjectiveParams.wY, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                            <TextBox Text="{Binding ElementName=MainCanvas, Path=ProjectiveParams.wY, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
                      HorizontalAlignment="Left" Margin="37,38,0,44" Grid.Column="2" Width="50"/>
 
                             <Label Content="wO" Grid.Column="2" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top"/>
-                            <TextBox Text="{Binding ElementName=MyCanvas, Path=ProjectiveParams.wO, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
+                            <TextBox Text="{Binding ElementName=MainCanvas, Path=ProjectiveParams.wO, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource FloatConverter}}" 
                      HorizontalAlignment="Left" Margin="37,63,0,19" Grid.Column="2" Width="50"/>
 
                             <Button Content="Apply" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"
-                    HorizontalAlignment="Center" Command="{Binding ElementName=MyCanvas, Path=InvalidateCanvasCommand}" 
+                    HorizontalAlignment="Center" Command="{Binding ElementName=MainCanvas, Path=InvalidateCanvasCommand}" 
                     VerticalAlignment="Center" Width="90"/>
-                            <CheckBox IsChecked="{Binding ElementName=MyCanvas, Path=AllowInfinityRender}" IsTabStop="False" Focusable="False" Content="Infinite render" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="66,0,0,0" VerticalAlignment="Center" Grid.Row="1" Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked"/>
+                            <CheckBox IsChecked="{Binding ElementName=MainCanvas, Path=AllowInfinityRender}" IsTabStop="False" Focusable="False" Content="Infinite render" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="66,0,0,0" VerticalAlignment="Center" Grid.Row="1" Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked"/>
                         </Grid>
                     </Grid>
                 </TabItem>
@@ -162,45 +162,45 @@
 
                             <!-- Bind ProjectiveModel Properties -->
                             <Label Content="Xx" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-                            <TextBox Text="{Binding ProjectiveParams.Xx, Converter={StaticResource FloatConverter}, ElementName=MyCanvas, UpdateSourceTrigger=PropertyChanged}" 
+                            <TextBox Text="{Binding ProjectiveParams.Xx, Converter={StaticResource FloatConverter}, ElementName=MainCanvas, UpdateSourceTrigger=PropertyChanged}" 
                                 HorizontalAlignment="Left" Margin="40,13,0,69" Width="50" Grid.ColumnSpan="2"/>
 
                             <Label Content="Yx" HorizontalAlignment="Left" Margin="10,35,0,0" VerticalAlignment="Top"/>
-                            <TextBox Text="{Binding ProjectiveParams.Yx, Converter={StaticResource FloatConverter}, ElementName=MyCanvas, UpdateSourceTrigger=PropertyChanged}" 
+                            <TextBox Text="{Binding ProjectiveParams.Yx, Converter={StaticResource FloatConverter}, ElementName=MainCanvas, UpdateSourceTrigger=PropertyChanged}" 
                                 HorizontalAlignment="Left" Margin="40,38,0,44" Width="50" Grid.ColumnSpan="2"/>
 
                             <Label Content="Ox" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top"/>
-                            <TextBox Text="{Binding ProjectiveParams.Ox, Converter={StaticResource FloatConverter}, ElementName=MyCanvas, UpdateSourceTrigger=PropertyChanged}" 
+                            <TextBox Text="{Binding ProjectiveParams.Ox, Converter={StaticResource FloatConverter}, ElementName=MainCanvas, UpdateSourceTrigger=PropertyChanged}" 
                                 HorizontalAlignment="Left" Margin="40,63,0,19" Width="50" Grid.ColumnSpan="2"/>
 
                             <Label Content="Xy" Grid.Column="1" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-                            <TextBox Text="{Binding ProjectiveParams.Xy, Converter={StaticResource FloatConverter}, ElementName=MyCanvas, UpdateSourceTrigger=PropertyChanged}" 
+                            <TextBox Text="{Binding ProjectiveParams.Xy, Converter={StaticResource FloatConverter}, ElementName=MainCanvas, UpdateSourceTrigger=PropertyChanged}" 
                                 HorizontalAlignment="Left" Margin="39,13,0,69" Grid.Column="1" Width="50"/>
 
                             <Label Content="Yy" Grid.Column="1" HorizontalAlignment="Left" Margin="10,35,0,0" VerticalAlignment="Top"/>
-                            <TextBox Text="{Binding ProjectiveParams.Yy, Converter={StaticResource FloatConverter}, ElementName=MyCanvas, UpdateSourceTrigger=PropertyChanged}" 
+                            <TextBox Text="{Binding ProjectiveParams.Yy, Converter={StaticResource FloatConverter}, ElementName=MainCanvas, UpdateSourceTrigger=PropertyChanged}" 
                                 HorizontalAlignment="Left" Margin="39,38,0,44" Grid.Column="1" Width="50"/>
 
                             <Label Content="Oy" Grid.Column="1" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top"/>
-                            <TextBox Text="{Binding ProjectiveParams.Oy, Converter={StaticResource FloatConverter}, ElementName=MyCanvas, UpdateSourceTrigger=PropertyChanged}" 
+                            <TextBox Text="{Binding ProjectiveParams.Oy, Converter={StaticResource FloatConverter}, ElementName=MainCanvas, UpdateSourceTrigger=PropertyChanged}" 
                                 HorizontalAlignment="Left" Margin="39,63,0,19" Grid.Column="1" Width="50"/>
 
                             <Label Content="wX" Grid.Column="2" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-                            <TextBox Text="{Binding ProjectiveParams.wX, Converter={StaticResource FloatConverter}, ElementName=MyCanvas, UpdateSourceTrigger=PropertyChanged}" 
+                            <TextBox Text="{Binding ProjectiveParams.wX, Converter={StaticResource FloatConverter}, ElementName=MainCanvas, UpdateSourceTrigger=PropertyChanged}" 
                                 HorizontalAlignment="Left" Margin="37,13,0,69" Grid.Column="2" Width="50"/>
 
                             <Label Content="wY" Grid.Column="2" HorizontalAlignment="Left" Margin="10,35,0,0" VerticalAlignment="Top"/>
-                            <TextBox Text="{Binding ProjectiveParams.wY, Converter={StaticResource FloatConverter}, ElementName=MyCanvas, UpdateSourceTrigger=PropertyChanged}" 
+                            <TextBox Text="{Binding ProjectiveParams.wY, Converter={StaticResource FloatConverter}, ElementName=MainCanvas, UpdateSourceTrigger=PropertyChanged}" 
                                 HorizontalAlignment="Left" Margin="37,38,0,44" Grid.Column="2" Width="50"/>
 
                             <Label Content="wO" Grid.Column="2" HorizontalAlignment="Left" Margin="10,60,0,0" VerticalAlignment="Top"/>
-                            <TextBox Text="{Binding ProjectiveParams.wO, Converter={StaticResource FloatConverter}, ElementName=MyCanvas, UpdateSourceTrigger=PropertyChanged}" 
+                            <TextBox Text="{Binding ProjectiveParams.wO, Converter={StaticResource FloatConverter}, ElementName=MainCanvas, UpdateSourceTrigger=PropertyChanged}" 
                                 HorizontalAlignment="Left" Margin="37,63,0,19" Grid.Column="2" Width="50"/>
 
                             <Button Content="Apply" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"
-                                HorizontalAlignment="Center" Command="{Binding InvalidateCanvasCommand, ElementName=MyCanvas}" 
+                                HorizontalAlignment="Center" Command="{Binding InvalidateCanvasCommand, ElementName=MainCanvas}" 
                                 VerticalAlignment="Center" Width="90"/>
-                            <CheckBox IsChecked="{Binding AllowInfinityRender, ElementName=MyCanvas}" IsTabStop="False" Focusable="False" Content="Infinite render" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="66,0,0,0" VerticalAlignment="Center" Grid.Row="1" Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked"/>
+                            <CheckBox IsChecked="{Binding AllowInfinityRender, ElementName=MainCanvas}" IsTabStop="False" Focusable="False" Content="Infinite render" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="66,0,0,0" VerticalAlignment="Center" Grid.Row="1" Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked"/>
                         </Grid>
                     </Grid>
                 </TabItem>
